--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <style type="text/css">
+    * {
+        transition: 1.5s all;
+    }
     img {
         max-width: 100%;
         width: 100%;
@@ -19,22 +22,22 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="xs-12 sm-8 md-6 lg-4 xl-2"><img src="http://placehold.it/350x150"></div>
-        <div class="xs-12 sm-4 md-6 lg-8 xl-10"><img src="http://placehold.it/350x150"></div>
+        <div class="xs-12 sm-8 md-6 lg-4 xl-12"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 sm-4 md-6 lg-8 xl-12"><img src="http://placehold.it/1500x300"></div>
     </div>
 </div>
 <hr>
 <div class="full-page-container">
     <div class="row">
-        <div class="xs-12 sm-8 md-6 lg-4 xl-2"><img src="http://placehold.it/350x150"></div>
-        <div class="xs-12 sm-4 md-6 lg-8 xl-10"><img src="http://placehold.it/350x150"></div>
+        <div class="xs-12 sm-8 md-6 lg-4 xl-12"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 sm-4 md-6 lg-8 xl-12"><img src="http://placehold.it/1500x300"></div>
     </div>
 </div>
 <hr>
 <div class="container">
     <div class="row">
-        <div class="xs-12 sm-8 md-6 lg-4 xl-2"><img src="http://placehold.it/350x150"></div>
-        <div class="xs-12 sm-4 md-6 lg-8 xl-10"><img src="http://placehold.it/350x150"></div>
+        <div class="xs-12 sm-8 md-6 lg-4 xl-12"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 sm-4 md-6 lg-8 xl-12"><img src="http://placehold.it/1500x300"></div>
     </div>
 </div>
 
