Updated for mobile or desktop first - updated the demo file

--- a/mobile_first/index.html
+++ b/mobile_first/index.html
@@ -16,20 +16,35 @@
         border: 1px solid black;
     }
     hr {
-        margin: 50px 0;
+        margin: 10px 0;
     }
 </style>
 <div class="container-fluid">
     <div class="row">
-        <div class="xs-12 sm-8 md-6 lg-4 xl-12"><img src="http://placehold.it/1500x300"></div>
-        <div class="xs-12 sm-4 md-6 lg-8 xl-12"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 xs-offset-0 sm-2 sm-offset-10 md-12 md-offset-0 lg-2 lg-offset-10 xl-12 xl-offset-0"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-2 xs-offset-10 sm-12 sm-offset-0 md-2 md-offset-10 lg-12 lg-offset-0 xl-2 xl-offset-10"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 xs-offset-0 sm-2 sm-offset-10 md-12 md-offset-0 lg-2 lg-offset-10 xl-12 xl-offset-0"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-2 xs-offset-10 sm-12 sm-offset-0 md-2 md-offset-10 lg-12 lg-offset-0 xl-2 xl-offset-10"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 xs-offset-0 sm-2 sm-offset-10 md-12 md-offset-0 lg-2 lg-offset-10 xl-12 xl-offset-0"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-2 xs-offset-10 sm-12 sm-offset-0 md-2 md-offset-10 lg-12 lg-offset-0 xl-2 xl-offset-10"><img src="http://placehold.it/1500x300"></div>
+
     </div>
 </div>
 <hr>
 <div class="full-page-container">
     <div class="row">
-        <div class="xs-12 sm-8 md-6 lg-4 xl-12"><img src="http://placehold.it/1500x300"></div>
-        <div class="xs-12 sm-4 md-6 lg-8 xl-12"><img src="http://placehold.it/1500x300"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
+        <div class="xs-12 sm-6 md-4 lg-3 xl-1"><img src="http://placehold.it/1500x100"></div>
     </div>
 </div>
 <hr>
@@ -37,6 +52,10 @@
     <div class="row">
         <div class="xs-12 sm-8 md-6 lg-4 xl-12"><img src="http://placehold.it/1500x300"></div>
         <div class="xs-12 sm-4 md-6 lg-8 xl-12"><img src="http://placehold.it/1500x300"></div>
+    </div>
+    <div class="row">
+        <div class="xl-8"><img src="http://placehold.it/1500x300"></div>
+        <div class="md-6"><img src="http://placehold.it/1500x300"></div>
     </div>
 </div>
 
